--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "nitro-router": "^0.3.5",
     "zod": "^4.0.17"
   },
