--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.1.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "nitro-router": "^0.3.5",
