--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
-    "nitro-router": "^0.3.5",
+    "nitro-router": "latest",
     "zod": "^4.0.17"
   },
   "scripts": {
